added score feature + guess (saved and can be expanded in gameplay views/modelse

--- a/gameplay/templates/gameplay/result.html
+++ b/gameplay/templates/gameplay/result.html
@@ -7,6 +7,10 @@
     You were <strong>{{ distance }} meters</strong> away!
   </p>
 
+  <p class="text-xl text-gtgold font-semibold mb-4">
+    Score: <span class="text-white">{{ score }}</span> points
+  </p>
+
   <div id="map" class="w-full h-96 rounded-lg shadow-md border border-gtgold"></div>
 
   <div class="mt-6">
